--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -1,17 +1,8 @@
-/*
- * ------------------------------------------------------------
- * IMPORTANT: The contents of this file are auto-generated.
- *
- * This file may be updated by the Shopify admin theme editor
- * or related systems. Please exercise caution as any changes
- * made to this file may be overwritten.
- * ------------------------------------------------------------
- */
 {
   "current": {
-    "logo": "shopify://shop_images/Horizontal_-_Black.svg",
+    "logo": "shopify:\/\/shop_images\/Horizontal_-_Black.svg",
     "logo_width": 160,
-    "favicon": "shopify://shop_images/Symbol_-_Black.svg",
+    "favicon": "shopify:\/\/shop_images\/Symbol_-_Black.svg",
     "type_header_font": "assistant_n4",
     "heading_scale": 100,
     "type_body_font": "assistant_n4",
@@ -105,8 +96,9 @@
     "badge_corner_radius": 40,
     "sale_badge_color_scheme": "scheme-5",
     "sold_out_badge_color_scheme": "scheme-3",
+    "brand_image": "shopify:\/\/shop_images\/Horizontal_-_White.svg",
     "social_facebook_link": "",
-    "social_instagram_link": "",
+    "social_instagram_link": "https:\/\/instagram.com\/sawickikaroll",
     "social_youtube_link": "",
     "social_tiktok_link": "",
     "social_twitter_link": "",
