--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -3,9 +3,9 @@
     "logo": "shopify:\/\/shop_images\/Horizontal_-_Black.svg",
     "logo_width": 160,
     "favicon": "shopify:\/\/shop_images\/Symbol_-_Black.svg",
-    "type_header_font": "assistant_n4",
+    "type_header_font": "inter_n4",
     "heading_scale": 100,
-    "type_body_font": "assistant_n4",
+    "type_body_font": "inter_n4",
     "body_scale": 100,
     "page_width": 2500,
     "spacing_sections": 0,
